# python-programming-project

./: .gitignore  .gitlab-ci.yml  requirements.in  requirements.txt  setup.cfg
.gitlab/merge_request_templates/: default.md
data/: sign_roundabout.jfif
data/checkpoint/: network10.ckpt.index
data/classifier2_weights/: img_val.npy  my_model_weights.h5
docs/naokishibuya_car-traffic-sign-classification/: .gitignore  ORIGINAL_README.md  README.md  requirements.in  test.ipynb
docs/naokishibuya_car-traffic-sign-classification/checkpoint/: checkpoint  network2.ckpt.data-00000-of-00001  network2.ckpt.index  network3.ckpt.index  (+2 more)
docs/shao-et.al_sensors/: README.md
src/: .coverage  main.py  report.xml
src/classifier/: __init__.py  classifier.py  classifier2.py  classifier_combination.py
src/gui/: __init__.py  gui_video_handler.py  gui_visuals.py  recorder.py
src/logic/: __init__.py  logic.py
src/objects/: __init__.py  commands_object.py  interface_object.py  patch_object.py  visualization_object.py
src/ocr_and_translation/: __init__.py  ocr.py  ocr_and_translation.py  sign_translator.py
src/preprocess/: __init__.py  color_analyser.py  mser.py  preprocess_utils.py  preprocessor.py  shapedetection.py
src/test/: config.py  test_classifer_combination.py  test_classifier.py  test_gui_visuals.py  test_image_downloader.py  test_logic.py  test_main.py  test_ocr_and_translation.py  test_preprocessor.py  test_translation.py  test_visualizer.py
src/utils/: __init__.py  bing_image_downloader.py  utils.py
src/visualization/: __init__.py  visualizer.py
(+3 files in other folders)
