[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[flake8]
max-line-length = 100

[mypy]
ignore_missing_imports = True

[pylint.format]
max-line-length = 100

[pylint.master]
extension-pkg-whitelist = cv2, tesserocr
max-attributes = 12

[tool:pytest]
addopts =
    -v
    -rsx
    --flake8
    --mypy
    --pylint
    --cov=src
    --cov-branch
    --cov-report=html
    --cov-report=term
    --cov-report term-missing
    --no-cov-on-fail
    --junitxml=report.xml

junit_family = xunit2
